--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,5 @@
 @import "./vars.scss";
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600&display=swap");
 :root {
   --color-background: #{$background};
   --color-window: #{$window-header};
@@ -7,11 +8,13 @@
   --color-black: #{$black};
   --color-white-buttons: #{$white-buttons};
   --color-gray-buttons: #{$gray-buttons};
+  --font-primary: #{$font-primary};
 }
 * {
   border: 0;
   margin: 0;
   padding: 0;
+  font-family: var(--font-primary);
   &::selection {
     background: none;
     color: inherit;
@@ -40,7 +43,19 @@
   background: var(--color-silver);
   border-top: 1px solid var(--color-white);
   border-bottom: 1px solid var(--color-gray-buttons);
-  @include flexible(column, 10px);
+  display: flex;
+  align-items: center;
+  &__content {
+    @include flexible(column, 20px);
+    width: max-content;
+  }
+  &__folder-open{
+    cursor: pointer;
+    @include borderButton;
+    padding: 4px 10px;
+    font-size: 14px;
+    font-weight: 600;
+  }
 }
 
 .button {
@@ -87,5 +102,47 @@
   align-items: flex-start;
   > * {
     margin: 14px;
+  }
+}
+
+.window {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  pointer-events: none;
+  &__window {
+    pointer-events: all;
+    min-width: 50vw;
+    min-height: 50vh;
+    background: var(--color-silver);
+    @include borderWindow;
+    animation: windows 0.3s forwards ease-in-out;
+    &-header {
+      height: 28px;
+      background: var(--color-window);
+      @include borderTitle;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 0 10px;
+      font-size: 14px;
+    }
+  }
+  &__title {
+    color: var(--color-white);
+    font-weight: 700;
+  }
+  @keyframes windows {
+    from {
+      transform: scale(0);
+    }
+    to {
+      transform: scale(1);
+    }
   }
 }
